--- a/SOLID and Design Patterns/SOLID and Design Patterns.csproj
+++ b/SOLID and Design Patterns/SOLID and Design Patterns.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 </Project>
